--- a/src/main/res/layout/fragment_dashboard.xml
+++ b/src/main/res/layout/fragment_dashboard.xml
@@ -83,7 +83,7 @@
         android:layout_height="56dp"
         android:elevation="10dp"
         android:scaleType="fitXY"
-        android:src="@drawable/color"
+        android:src="@drawable/reset"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.045"
@@ -97,7 +97,7 @@
         android:layout_height="56dp"
         android:elevation="10dp"
         android:scaleType="fitXY"
-        android:src="@drawable/delete"
+        android:src="@drawable/undo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.236"
@@ -111,12 +111,27 @@
         android:layout_height="56dp"
         android:elevation="10dp"
         android:scaleType="fitXY"
-        android:src="@drawable/raight"
+        android:src="@drawable/redo"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.416"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/animationView_main"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.003"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.118"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/pen" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
